# lokum-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  test_debug.py  test_debug2.py  test_debug3.py  test_debug4.py  test_torch.py
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-06-23-phase2-reranking.md  2026-06-23-rag-correctness.md  2026-06-23-truthful-reliability.md
docs/superpowers/specs/: 2026-06-23-truthful-reliability-design.md
src/lokum_engine/: __init__.py  paths.py
src/lokum_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lokum_engine/finetune/: __init__.py  engine.py
src/lokum_engine/models/: __init__.py  downloader.py
src/lokum_engine/rag/: __init__.py  engine.py  reader_engine.py
tests/: test_finetune_presplit_chatml.py  test_finetune_quality.py  test_finetune_validation.py  test_paths.py  test_rag_extensions.py  test_rag_persistence.py  test_rag_persistence_truthfulness.py  test_rag_quality.py  test_rag_query_truthfulness.py  test_rag_reader_engine.py  test_rag_reranking.py
