[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lokum-engine"
version = "0.1.0"
description = "LokumAI engines: RAG + MLX LoRA fine-tuning utilities"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "fox" }]
dependencies = [
  "numpy",
  "sentence-transformers",
  "faiss-cpu",
  "PyMuPDF",
  "python-docx",
  "pillow",
  "pytesseract",
  "libzim",
  "mlx-lm",
  "huggingface_hub",
]

[project.urls]
Homepage = "https://github.com/<YOU>/lokum-engine"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
