[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lokum-engine"
version = "0.1.1"
description = "LokumAI engines: RAG + MLX LoRA fine-tuning utilities"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "fox" }]
dependencies = [
  "numpy",
  "sentence-transformers",
  "faiss-cpu",
  "PyMuPDF",
  "python-docx",
  "pillow",
  "pytesseract",
  "libzim",
  "mlx-lm",
  "huggingface_hub",
]

[project.urls]
Homepage = "https://github.com/fox7524/lokum-engine"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
